fixed visibility issue with menu items

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,12 +98,12 @@ iframe {
 
 nav.nav-header {
     /*align-items: center;*/
-    /*background-color: rgba(0,0,0,.7);*/
+    background-color: rgba(0,0,0,.7);
     /*display: flex;*/
     height: 50px; /*temprarily enlarged to 300px so i can see menu list*/
     /*max-width: inherit;*/
     /*overflow: hidden;*/
-    /*position: fixed;*/
+    position: fixed;
     top: 0;
     -webkit-transition: height .5s ease-out;
     transition: height 2s ease;
@@ -172,7 +172,7 @@ div#menu-items {
     /*display: inline-block;*/
     display: none;
     max-width: 100px;
-    z-index: 1000;
+    z-index: 1000000;
 }
 
 div#menu-items a {
@@ -182,6 +182,7 @@ div#menu-items a {
     padding: 10px 0;
     padding-left: 4%;
     font-size: 0.8em;
+    overflow: visible;
     
     -webkit-box-shadow: 0 0 3px #444;
     -moz-box-shadow: 0 0 3px #444;
